--- a/css/style.css
+++ b/css/style.css
@@ -7,8 +7,7 @@
 body{
 	/*background: #24ffc8;*/
 	background: #ffffff;
-	background-image: url("../images/page_back.jpg");
-	overflow: hidden;
+	/*overflow: hidden;*/
 }
 
 h1{
@@ -22,9 +21,10 @@ h1{
 	margin: 2ex;
 }
 
-.buttonHolder{
-	text-align: center;
-	margin: 2ex;
+.inputHolder textarea {
+	width: 30em;
+	height: 5em;
+	margin-right: 1em;
 }
 
 #drop_zone{
@@ -32,4 +32,38 @@ h1{
 	border-style: dotted;
 	width: 200px;
 	text-align: center;
+}
+
+#eval_items {
+	cursor: move;
+}
+
+#eval_items i{
+	transition: opacity .2s;
+	opacity: 0;
+	/*display: block;*/
+	cursor: pointer;
+	color: #c00;
+}
+
+#eval_items li:hover i{
+	opacity: 1;
+}
+
+.studentHolder {
+	margin-top: 2em;
+	margin-bottom: 2em;
+}
+
+.buttonHolder{
+	text-align: center;
+}
+
+[class*="col-"] {
+  padding-top: 15px;
+  padding-bottom: 15px;
+/*  background-color: #eee;
+  background-color: rgba(86,61,124,.15);*/
+  border: 1px solid #ddd;
+  border: 1px solid rgba(86,61,124,.2);
 }
