--- a/css/style.css
+++ b/css/style.css
@@ -27,13 +27,6 @@ h1{
 	margin-right: 1em;
 }
 
-#drop_zone{
-	padding: 20px;
-	border-style: dotted;
-	width: 200px;
-	text-align: center;
-}
-
 #eval_items {
 	cursor: move;
 }
@@ -59,9 +52,19 @@ h1{
 	text-align: center;
 }
 
+.star-rating {
+	float:right;
+	margin-right: 2em;
+}
+
+input[type="radio"] {
+	margin-left: 1em;
+}
+
 [class*="col-"] {
-  padding-top: 15px;
-  padding-bottom: 15px;
+  /*padding-top: 15px;
+  padding-bottom: 15px;*/
+  padding: 15px;
 /*  background-color: #eee;
   background-color: rgba(86,61,124,.15);*/
   border: 1px solid #ddd;
