--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,21 @@ h1{
 	text-align: center;
 }
 
+.lead {
+	text-align: center;
+}
+
+.instruction {
+	position:relative;
+    left:20%;
+    width: 60%;
+	/*text-align: center;*/
+}
+
+.instruction li {
+	/*display: table-cell;*/
+}
+
 .inputHolder{
 	text-align: center;
 	margin: 2ex;
