--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,21 @@ h1{
 	text-align: center;
 }
 
+.lead {
+	text-align: center;
+}
+
+.instruction {
+	position:relative;
+    left:20%;
+    width: 60%;
+	/*text-align: center;*/
+}
+
+.instruction li {
+	/*display: table-cell;*/
+}
+
 .inputHolder{
 	text-align: center;
 	margin: 2ex;
@@ -54,11 +69,16 @@ h1{
 
 .star-rating {
 	float:right;
-	margin-right: 2em;
+	/*margin-right: 2em;*/
 }
 
 input[type="radio"] {
 	margin-left: 1em;
+}
+
+.btnSS {
+	float:right;
+	margin-top: 3em;
 }
 
 [class*="col-"] {
